<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_centerHorizontal="true"
        />
    <Switch
        android:id="@+id/switchWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/textW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workAnswer"
        android:layout_marginTop="90dp"
        android:layout_marginStart="10dp"

        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:layout_marginTop="120dp"
        android:layout_marginStart="10dp"

        android:layout_centerHorizontal="true"/>
    <Switch
        android:id="@+id/switchStudy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="10dp"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/textS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passAnswer"
        android:layout_marginTop="180dp"
        android:layout_marginStart="10dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have"
        android:layout_marginTop="220dp"
        android:layout_marginStart="10dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/textEdit"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/textA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"/>
</RelativeLayout>